src/elements/pages/dev/game/rvt-user-games.scss
@use '../../../shared/common';
@use '../../../shared/utils';
@use '../../../shared/consts';

.dashed-border-button {
	$border-width: 3px;
	$border-radius: 30px;

	overflow: hidden;
	display: flex;
	position: relative;
	padding: $border-width;
	border-radius: $border-radius;

	background-image: utils.dashed-border(
		rgba(255, 255, 255, 0.12),
		$border-radius,
		$border-width,
		$dash-array: (5, 11),
		$dash-offset: 2px
	);

	&:hover {
		background-image: utils.dashed-border(
			rgba(255, 255, 255, 0.15),
			$border-radius,
			$border-width,
			$dash-array: (5, 11),
			$dash-offset: 2px
		);

		#create-game-content {
			background-color: rgba(255, 255, 255, 0.02);
		}
	}
}

#base {
	page-header {
		--icon-fill: #ff4a4b;
	}

	#body {
		display: flex;
		flex-direction: column;

		#groups-list {
			display: flex;
			flex-direction: column;

			.group {
				display: flex;
				flex-direction: column;
				margin-bottom: 35px;

				.group-header {
					font-weight: lighter;
					display: flex;
					flex-direction: row;
					place-content: space-between;
					margin-bottom: 20px;

					a {
						display: flex;
						flex-direction: row;
						align-items: center;

						group-avatar {
							width: 35px;
							height: 35px;
							margin-right: 10px;
						}

						h2 {
							font-size: 24px;
							margin: -3px 15px 0 0;
						}
					}

					stylized-button {
						margin-right: 10px;

						&:last-child {
							margin-right: 0;
						}
					}

					.visit-button,
					.billing-button {
						--padding: 0 12px 0 15px;
						--right-icon-margin: 0 0 0 8px;
						--text-transform: none;
					}
				}

				.muted-text {
					margin: 0;
					color: #ececec80;
					margin: -4px 0 5px 10px;
				}

				.games-list {
					#create-game {
						$border-width: 3px;
						$border-radius: 32px;

						overflow: hidden;
						display: flex;
						position: relative;
						height: 320px;
						border-radius: $border-radius;

						background-image: utils.dashed-border(
							rgba(255, 255, 255, 0.12),
							$border-radius,
							$border-width,
							$dash-array: (5, 11),
							$dash-offset: 2px
						);

						&:hover {
							background-image: utils.dashed-border(
								rgba(255, 255, 255, 0.15),
								$border-radius,
								$border-width,
								$dash-array: (5, 11),
								$dash-offset: 2px
							);

							#create-game-content {
								background-color: rgba(255, 255, 255, 0.02);
							}
						}

						@include common.active-state();

						#create-game-content {
							position: relative;
							display: flex;
							flex-direction: column;
							align-items: center;
							justify-content: center;
							z-index: 1;

							padding: 16px;
							box-sizing: border-box;
							width: 100%;
							height: 100%;
							border-radius: $border-radius - $border-width;
							text-align: center;

							font-size: 20px;
							font-weight: 600;
							color: rgba(255, 255, 255, 0.8);
							cursor: pointer;

							lazy-img {
								width: 140px;
								height: 140px;
								margin: -25px 15px 30px 15px;
							}
						}
					}

					#non-dev-group-selected {
						display: flex;
						flex-direction: row;
						align-items: center;
						margin: 5px 0 0 10px;

						h2 {
							margin: 0;
							font-size: 16px;
							font-weight: 600;
							color: #ecececcc;
						}

						stylized-button {
							margin-left: 12px;
						}
					}
				}
			}
		}

		.placeholder-group {
			position: relative;
			box-sizing: border-box;
			max-width: 850px;

			loading-placeholder {
				--border-radius: 3px;
			}

			.placeholder-group-header {
				display: flex;
				flex-direction: row;
				margin-bottom: 20px;

				loading-placeholder {
					width: 110px;
					height: 35px;
					margin-right: 10px;

					&:first-child {
						width: 35px;
					}

					&:nth-child(2) {
						width: 160px;
					}

					&:last-child {
						margin-right: 0;
					}
				}
			}

			.placeholder-group-body {
				display: flex;
				flex-flow: row wrap;
				margin-bottom: -23px;

				loading-placeholder {
					width: 100%;
					height: 380px;
					// margin: 0 23px 23px 0;
					margin: auto;
					margin-bottom: 23px;
					--border-radius: 28px;

					&:last-child {
						margin-right: 0;
					}
				}
			}
		}
	}

	#placeholder {
		display: flex;
		flex-direction: column;

		.placeholder-group {
			&:not(:last-child) {
				margin-bottom: 24px;
			}
		}
	}
}

#create-group-modal,
#create-game-modal {
	[slot='body'] {
		h1 {
			margin-bottom: 0;
			color: black;

			text-align: center;
			font-size: 18px;
			font-weight: bold;
			font-family: consts.$open-sans;
		}

		.input-group {
			display: flex;
			flex-direction: column;
			width: 100%;

			h2 {
				margin: 14px 0 2px 0;
				color: black;

				font-size: 10px;
				font-weight: bold;
				font-family: consts.$open-sans;
				text-transform: uppercase;
			}

			#create-group-error,
			#create-game-error {
				max-width: 210px;
				margin-top: 7px;
				padding: 0 4px;

				color: red;
				font-size: 10px;
				font-family: consts.$open-sans;
				font-weight: bolder;

				e-svg {
					--fill: red;
					width: 1.4em;
					height: 1.4em;
					vertical-align: -3px;
					margin-right: 2px;
				}
			}
		}

		stylized-button {
			margin-top: 8px;
			width: 100%;
			max-width: 200px;
			--padding: 0 35px;
		}
	}
}

#create-group-modal {
	[slot='body'] {
		#preview {
			position: relative;
			width: 100%;
			max-width: 200px;
			box-sizing: border-box;
			padding: 16px 16px 8px 16px;

			&.active {
				margin-right: 0;
			}

			#profile-icon {
				position: relative;
				left: 50%;
				width: 70px;
				height: 70px;
				margin-left: -35px;
				border-radius: 100%;
				background-color: black;

				color: white;
				font-size: 24px;
				font-weight: bold;
				line-height: 70px;
				text-align: center;
			}

			h3 {
				margin: 8px 0 0 0;
				color: black;
				font-size: 12px;
				text-align: center;
				font-family: consts.$open-sans;
				font-weight: bold;

				text-overflow: ellipsis;
				overflow: hidden;
			}
		}
	}
}

#create-game-modal {
	[slot='body'] {
		drop-down-list {
			--max-height: 58px;
		}

		p.content {
			margin: 12px 0 7px 0;
			max-width: 200px;
			font-size: 12px;
			font-weight: 600;
			color: rgba(0, 0, 0, 0.8);
		}
	}
}

@media only screen and (max-width: 1100px) {
	.placeholder-group {
		.placeholder-group-body {
			loading-placeholder:nth-child(2) {
				display: none;
			}
		}
	}
}

